Fix hgroup max-width settings for better copy alignment

--- a/sass/_new.sass
+++ b/sass/_new.sass
@@ -105,7 +105,7 @@ body > header
       font-weight: 600
       +text-shadow(0px 3px 8px $grayDark)
   hgroup
-    max-width: 80%
+    max-width: 75%
     width: auto
     margin: 0 auto
     $h1-font: 26px
@@ -120,7 +120,6 @@ body > header
       font-weight: normal
       line-height: $font-size
       font-size: $font-size - 2
-      max-width: 90%
   nav
     background: $grayLighter + 8
     padding: 10px 0
